--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -4,7 +4,7 @@ android {
   compileSdkVersion 25
   buildToolsVersion "25.0.2"
   defaultConfig {
-    applicationId "com.jrummyapps.blockingdialog.demo"
+    applicationId "com.jaredrummler.blockingdialog.demo"
     minSdkVersion 11
     targetSdkVersion 25
     versionCode 1
@@ -29,6 +29,6 @@ dependencies {
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  compile 'com.android.support:appcompat-v7:25.1.1'
+  compile 'com.android.support:appcompat-v7:25.3.1'
   testCompile 'junit:junit:4.12'
 }
